Bug 24765 - TARGET_USE_BIT_TEST is never used
Summary: TARGET_USE_BIT_TEST is never used
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: target (show other bugs)
Version: 4.1.0
: P3 trivial
Target Milestone: 4.4.0
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-11-09 21:40 UTC by H.J. Lu
Modified: 2008-10-07 16:10 UTC (History)
1 user (show)

See Also:
Host:
Target: i686-pc-linux-gnu
Build:
Known to work:
Known to fail:
Last reconfirmed: 2005-11-11 17:51:54


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2005-11-09 21:40:01 UTC
TARGET_USE_BIT_TEST introduced in

http://gcc.gnu.org/ml/gcc-patches/1998-08/msg00197.html

is never used.
Comment 1 Andrew Pinski 2005-11-11 17:51:54 UTC
Confirmed.
Comment 2 hjl@gcc.gnu.org 2008-10-07 16:01:51 UTC
Subject: Bug 24765

Author: hjl
Date: Tue Oct  7 16:00:30 2008
New Revision: 140938

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=140938
Log:
2008-10-07  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/24765
	* config/i386/i386.c (initial_ix86_tune_features): Remove
	X86_TUNE_USE_BIT_TEST.
	* config/i386/i386.h (ix86_tune_indices): Likewise.
	(TARGET_USE_BIT_TEST): Removed.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/config/i386/i386.c
    trunk/gcc/config/i386/i386.h

Comment 3 H.J. Lu 2008-10-07 16:10:01 UTC
Fixed.